vbnc/vbnc/tests/Errors/33104-1.vb
Class A
    Shared Sub Main()
        Dim o As Object = If(Nothing)
    End Sub
End Class